docs/4.0/workflow/v1alpha1/inputs.md
---
permalink: /4.0/workflow/v1alpha1/inputs/
---

# workflow.v1alpha1.inputs

"Inputs are the mechanism for passing parameters, artifacts, volumes from one template to another"

## Index

* [`fn withArtifacts(artifacts)`](#fn-withartifacts)
* [`fn withArtifactsMixin(artifacts)`](#fn-withartifactsmixin)
* [`fn withParameters(parameters)`](#fn-withparameters)
* [`fn withParametersMixin(parameters)`](#fn-withparametersmixin)

## Fields

### fn withArtifacts

```ts
withArtifacts(artifacts)
```

"Artifact are a list of artifacts passed as inputs"

### fn withArtifactsMixin

```ts
withArtifactsMixin(artifacts)
```

"Artifact are a list of artifacts passed as inputs"

**Note:** This function appends passed data to existing values

### fn withParameters

```ts
withParameters(parameters)
```

"Parameters are a list of parameters passed as inputs MaxItems is an artificial limit to limit CEL validation costs - see note at top of file"

### fn withParametersMixin

```ts
withParametersMixin(parameters)
```

"Parameters are a list of parameters passed as inputs MaxItems is an artificial limit to limit CEL validation costs - see note at top of file"

**Note:** This function appends passed data to existing values